[Main Body/Links Widget] Fix alignment of links widget when embedded in main body

--- a/app/assets/stylesheets/redesign/components/_main-content-section.sass
+++ b/app/assets/stylesheets/redesign/components/_main-content-section.sass
@@ -112,7 +112,10 @@
 
     .widget-links-list
       font-weight: 500
-      margin-top: 3em
+      margin-top: 2em
+
+      ul
+        padding-left: 0
 
     @media only screen and (min-width: 601px)
       float: left
